--- a/app/web/template/check_your_lpa.gohtml
+++ b/app/web/template/check_your_lpa.gohtml
@@ -1,5 +1,7 @@
 {{ template "page" . }}
 
+{{ define "pageTitle" }}{{ tr .App "checkYourLpa" }}{{ end }}
+
 {{ define "main" }}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
