--- a/app/web/template/do_you_want_to_notify_people.gohtml
+++ b/app/web/template/do_you_want_to_notify_people.gohtml
@@ -1,36 +1,37 @@
 {{ template "page" . }}
 
+{{ define "pageTitle" }}{{ tr .App "peopleToNotify" }}{{ end }}
+
 {{ define "main" }}
-    <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-            <form novalidate method="post">
-                <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-                    <h1 class="govuk-fieldset__heading govuk-!-margin-bottom-6">{{ tr .App "peopleToNotify" }}</h1>
-                </legend>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <form novalidate method="post">
+        <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
+          <h1 class="govuk-fieldset__heading govuk-!-margin-bottom-6">{{ tr .App "peopleToNotify" }}</h1>
+        </legend>
 
-                {{ trHtml .App "wantPeopleToNotifyContent" }}
+        {{ trHtml .App "wantPeopleToNotifyContent" }}
 
-                {{ $lpaType := tr .App .Lpa.LpaLegalTermTransKey }}
-                {{ $howWorkTogether := tr .App .HowWorkTogether }}
-                {{ trFormatHtml .App "weWillOnlyTellThemBullets" "LpaType" $lpaType "AllAttorneysFirstNames" .Lpa.AttorneysFirstNames "HowAttorneysWorkTogether" $howWorkTogether}}
+        {{ $lpaType := tr .App .Lpa.LpaLegalTermTransKey }}
+        {{ $howWorkTogether := tr .App .HowWorkTogether }}
+        {{ trFormatHtml .App "weWillOnlyTellThemBullets" "LpaType" $lpaType "AllAttorneysFirstNames" .Lpa.AttorneysFirstNames "HowAttorneysWorkTogether" $howWorkTogether}}
 
-                {{ trHtml .App "findOutMoreAboutPeopleToNotifyLink" }}
+        {{ trHtml .App "findOutMoreAboutPeopleToNotifyLink" }}
 
-                <div class="govuk-form-group {{ if index .Errors "want-to-notify" }}govuk-form-group--error{{ end }}">
-                    <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
-                        <h2 class="govuk-fieldset__heading">{{ tr .App "wantPeopleToNotify" }}</h2>
-                    </legend>
-                    {{ template "error-message" (errorMessage . "want-to-notify") }}
+        <div class="govuk-form-group {{ if index .Errors "want-to-notify" }}govuk-form-group--error{{ end }}">
+          <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">
+            <h2 class="govuk-fieldset__heading">{{ tr .App "wantPeopleToNotify" }}</h2>
+          </legend>
+          {{ template "error-message" (errorMessage . "want-to-notify") }}
 
-                    {{ template "radios" (items . "want-to-notify" .WantToNotify
-                    (item "yes" "yes")
-                    (item "no" "no")
-                    ) }}
-                </div>
-
-                {{ template "continue-button" . }}
-
-            </form>
+          {{ template "radios" (items . "want-to-notify" .WantToNotify
+            (item "yes" "yes")
+            (item "no" "no")
+          ) }}
         </div>
+
+        {{ template "continue-button" . }}
+      </form>
     </div>
+  </div>
 {{ end }}
