--- a/app/web/template/layout/page.gohtml
+++ b/app/web/template/layout/page.gohtml
@@ -3,7 +3,7 @@
   <html lang="en" class="govuk-template app-html-class">
     <head>
       <meta charset="utf-8">
-      <title>{{ if .Errors }}Error: {{ end }}{{ tr .App "serviceName" }}</title>
+      <title>{{ if .Errors }}Error: {{ end }} {{ if not (eq .App.Page .App.Paths.Start) }}{{ template "pageTitle" . }} - {{ end }}{{ tr .App "serviceName" }}</title>
       <link rel="preload" href="/static/stylesheets/all.css?{{ .App.StaticHash }}" as="style">
       <link rel="preload" href="/static/javascript/main.js?{{ .App.StaticHash }}" as="script">
       <link rel="preconnect" href="//dataplane.rum.eu-west-1.amazonaws.com">
