--- a/app/web/template/what_youll_need_to_confirm_your_identity.gohtml
+++ b/app/web/template/what_youll_need_to_confirm_your_identity.gohtml
@@ -1,13 +1,15 @@
 {{ template "page" . }}
 
+{{ define "pageTitle" }}{{ tr .App "whatYoullNeedToConfirmYourIdentity" }}{{ end }}
+
 {{ define "main" }}
-    <div class="govuk-grid-row">
-      <div class="govuk-grid-column-two-thirds">
-        <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">{{ tr .App "whatYoullNeedToConfirmYourIdentity" }}</h1>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <h1 class="govuk-heading-xl govuk-!-margin-bottom-6">{{ tr .App "whatYoullNeedToConfirmYourIdentity" }}</h1>
 
-        {{ trHtml .App "whatYoullNeedToConfirmYourIdentityContent" }}
+      {{ trHtml .App "whatYoullNeedToConfirmYourIdentityContent" }}
 
-        <a class="govuk-button govuk-!-margin-top-4" href="{{ link .App .Continue }}" data-module="govuk-button">{{ tr $.App "continue" }}</a>
-      </div>
+      <a class="govuk-button govuk-!-margin-top-4" href="{{ link .App .Continue }}" data-module="govuk-button">{{ tr $.App "continue" }}</a>
     </div>
+  </div>
 {{ end }}
