--- a/app/web/template/do_you_want_replacement_attorneys.gohtml
+++ b/app/web/template/do_you_want_replacement_attorneys.gohtml
@@ -1,5 +1,7 @@
 {{ template "page" . }}
 
+{{ define "pageTitle" }}{{ tr .App "wantReplacementAttorneys" }}{{ end }}
+
 {{ define "main" }}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
@@ -36,7 +38,6 @@
 
           {{ template "continue-button" . }}
         </div>
-
       </form>
     </div>
   </div>
