--- a/app/web/template/how_should_attorneys_make_decisions.gohtml
+++ b/app/web/template/how_should_attorneys_make_decisions.gohtml
@@ -1,70 +1,72 @@
 {{ template "page" . }}
 
+{{ define "pageTitle" }}{{ tr .App "howShouldAttorneysMakeDecisions" }}{{ end }}
+
 {{ define "main" }}
-    <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-            <h1 class="govuk-heading-xl">{{ tr .App "howShouldAttorneysMakeDecisions" }}</h1>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <h1 class="govuk-heading-xl">{{ tr .App "howShouldAttorneysMakeDecisions" }}</h1>
 
-            <form novalidate method="post">
-                <div class="govuk-form-group">
-                    <div class="govuk-form-group {{ if index .Errors "decision-type" }}govuk-form-group--error{{ end }}">
-                        {{ template "error-message" (errorMessage . "decision-type") }}
+      <form novalidate method="post">
+        <div class="govuk-form-group">
+          <div class="govuk-form-group {{ if index .Errors "decision-type" }}govuk-form-group--error{{ end }}">
+            {{ template "error-message" (errorMessage . "decision-type") }}
 
-                        <div class="govuk-radios {{ if index .Errors "decision-type" }}govuk-radios--error{{ end }}" data-module="govuk-radios">
-                            <div class="govuk-radios__item">
-                                <input class="govuk-radios__input" id="f-decision-type" name="decision-type" type="radio" value="jointly-and-severally" aria-describedby="decision-type-item-hint" {{ if eq "jointly-and-severally" .Form.DecisionsType }}checked{{ end }}>
-                                <label class="govuk-label govuk-radios__label govuk-label--s" for="f-decision-type">
-                                    {{ tr .App "jointlyAndSeverallyHumanised" }}
-                                </label>
+            <div class="govuk-radios {{ if index .Errors "decision-type" }}govuk-radios--error{{ end }}" data-module="govuk-radios">
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="f-decision-type" name="decision-type" type="radio" value="jointly-and-severally" aria-describedby="decision-type-item-hint" {{ if eq "jointly-and-severally" .Form.DecisionsType }}checked{{ end }}>
+                <label class="govuk-label govuk-radios__label govuk-label--s" for="f-decision-type">
+                  {{ tr .App "jointlyAndSeverallyHumanised" }}
+                </label>
 
-                                <div id="decision-type-item-hint" class="govuk-radios__hint">
-                                    {{ trHtml .App "jointlyAndSeverallyHint" }}
-                                </div>
-                            </div>
-                            <div class="govuk-radios__item">
-                                <input class="govuk-radios__input" id="f-decision-type-2" name="decision-type" type="radio" value="jointly" aria-describedby="decision-type-2-item-hint" {{ if eq "jointly" .Form.DecisionsType }}checked{{ end }}>
-                                <label class="govuk-label govuk-radios__label govuk-label--s" for="f-decision-type-2">
-                                    {{ tr .App "jointlyHumanised" }}
-                                </label>
-
-                                <div id="decision-type-2-item-hint" class="govuk-radios__hint">
-                                    {{ trHtml .App "jointlyHintAttorneys" }}
-                                </div>
-                            </div>
-                            <div class="govuk-radios__item">
-                                <input class="govuk-radios__input" id="f-decision-type-3" name="decision-type" type="radio" value="mixed" aria-describedby="decision-type-3-item-hint" aria-controls="decision-type-3-conditional-div" {{ if or (eq "mixed" .Form.DecisionsType) (index .Errors "mixed-details") }}checked{{ end }}>
-                                <label class="govuk-label govuk-radios__label govuk-label--s" for="f-decision-type-3">
-                                    {{ tr .App "jointlyAndSeverallyMixedHumanised" }}
-                                </label>
-
-                                <div id="decision-type-3-item-hint" class="govuk-radios__hint">
-                                    {{ trHtml .App "jointlyAndSeverallyMixedHint" }}
-                                </div>
-
-                                <div class="govuk-radios__conditional" id="decision-type-3-conditional-div">
-                                    <div class="govuk-form-group {{ if index .Errors "mixed-details" }}govuk-form-group--error{{ end }}">
-                                        <p class="govuk-body">{{ trHtml .App "decisionDetailsHint" }}</p>
-                                        <label class="govuk-label" for="mixed-details">
-                                            {{ tr .App "details" }}
-                                        </label>
-                                        {{ if index .Errors "mixed-details" }}
-                                            <p id="decision-type-3-error" class="govuk-error-message">
-                                                {{ tr .App (index .Errors "mixed-details") }}
-                                            </p>
-                                        {{ end }}
-
-                                        <textarea class="govuk-textarea {{ if index .Errors "mixed-details" }}govuk-input--error{{ end }}" id="mixed-details" name="mixed-details" rows="10">{{ .Form.DecisionsDetails }}</textarea>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="govuk-button-group">
-                        {{ template "continue-button" . }}
-                    </div>
+                <div id="decision-type-item-hint" class="govuk-radios__hint">
+                  {{ trHtml .App "jointlyAndSeverallyHint" }}
                 </div>
-            </form>
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="f-decision-type-2" name="decision-type" type="radio" value="jointly" aria-describedby="decision-type-2-item-hint" {{ if eq "jointly" .Form.DecisionsType }}checked{{ end }}>
+                <label class="govuk-label govuk-radios__label govuk-label--s" for="f-decision-type-2">
+                  {{ tr .App "jointlyHumanised" }}
+                </label>
+
+                <div id="decision-type-2-item-hint" class="govuk-radios__hint">
+                  {{ trHtml .App "jointlyHintAttorneys" }}
+                </div>
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="f-decision-type-3" name="decision-type" type="radio" value="mixed" aria-describedby="decision-type-3-item-hint" aria-controls="decision-type-3-conditional-div" {{ if or (eq "mixed" .Form.DecisionsType) (index .Errors "mixed-details") }}checked{{ end }}>
+                <label class="govuk-label govuk-radios__label govuk-label--s" for="f-decision-type-3">
+                  {{ tr .App "jointlyAndSeverallyMixedHumanised" }}
+                </label>
+
+                <div id="decision-type-3-item-hint" class="govuk-radios__hint">
+                  {{ trHtml .App "jointlyAndSeverallyMixedHint" }}
+                </div>
+
+                <div class="govuk-radios__conditional" id="decision-type-3-conditional-div">
+                  <div class="govuk-form-group {{ if index .Errors "mixed-details" }}govuk-form-group--error{{ end }}">
+                    <p class="govuk-body">{{ trHtml .App "decisionDetailsHint" }}</p>
+                    <label class="govuk-label" for="mixed-details">
+                      {{ tr .App "details" }}
+                    </label>
+                    {{ if index .Errors "mixed-details" }}
+                      <p id="decision-type-3-error" class="govuk-error-message">
+                        {{ tr .App (index .Errors "mixed-details") }}
+                      </p>
+                    {{ end }}
+
+                    <textarea class="govuk-textarea {{ if index .Errors "mixed-details" }}govuk-input--error{{ end }}" id="mixed-details" name="mixed-details" rows="10">{{ .Form.DecisionsDetails }}</textarea>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="govuk-button-group">
+            {{ template "continue-button" . }}
+          </div>
         </div>
+      </form>
     </div>
+  </div>
 {{ end }}
