--- a/app/web/template/identity_with_one_login_callback.gohtml
+++ b/app/web/template/identity_with_one_login_callback.gohtml
@@ -1,5 +1,13 @@
 {{ template "page" . }}
 
+{{ define "pageTitle" }}
+  {{ if .CouldNotConfirm }}
+    {{ tr .App "yourIdentityNotConfirmedWithOneLogin" }}
+  {{ else }}
+    {{ tr .App "yourIdentityConfirmedWithOneLogin" }}
+  {{ end }}
+{{ end }}
+
 {{ define "main" }}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
