--- a/app/web/template/identity_with_todo.gohtml
+++ b/app/web/template/identity_with_todo.gohtml
@@ -1,13 +1,15 @@
 {{ template "page" . }}
 
-{{ define "main" }}
-    <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-            <h1 class="govuk-heading-xl">Identity was (not) confirmed with {{.IdentityOption}}</h1>
+{{ define "pageTitle" }}Identity was (not) confirmed with {{.IdentityOption}}{{ end }}
 
-            <form novalidate method="post">
-              {{ template "continue-button" . }}
-            </form>
-        </div>
+{{ define "main" }}
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <h1 class="govuk-heading-xl">Identity was (not) confirmed with {{.IdentityOption}}</h1>
+
+      <form novalidate method="post">
+        {{ template "continue-button" . }}
+      </form>
     </div>
+  </div>
 {{ end }}
