--- a/app/web/template/read_your_lpa.gohtml
+++ b/app/web/template/read_your_lpa.gohtml
@@ -1,11 +1,11 @@
 {{ template "page" . }}
 
+{{ define "pageTitle" }}{{ tr .App "readYourLpa" }}{{ end }}
+
 {{ define "main" }}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <h1 class="govuk-heading-xl">
-        {{ tr .App "readYourLpa" }}
-      </h1>
+      <h1 class="govuk-heading-xl">{{ tr .App "readYourLpa" }}</h1>
 
       {{ template "warning" (warning .App "readAndCheckYourLpa") }}
       {{ template "details" (details . "whatHappensIfIWantToMakeChanges" "whatHappensIfIWantToMakeChangesContent" false) }}
