--- a/app/web/template/task_list.gohtml
+++ b/app/web/template/task_list.gohtml
@@ -1,5 +1,7 @@
 {{ template "page" . }}
 
+{{ define "pageTitle" }}{{ tr .App "taskListHeading" }}{{ end }}
+
 {{ define "main" }}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
