--- a/app/web/template/who_do_you_want_to_be_certificate_provider_guidance.gohtml
+++ b/app/web/template/who_do_you_want_to_be_certificate_provider_guidance.gohtml
@@ -1,8 +1,11 @@
 {{ template "page" . }}
 
+{{ define "pageTitle" }}{{ tr .App "whoDoYouWantToBeCertificateProviderTitle" }}{{ end }}
+
 {{ define "main" }}
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
+      <h1 class="govuk-heading-xl">{{ tr .App "whoDoYouWantToBeCertificateProviderTitle" }}</h1>
       {{ trHtml .App "whoDoYouWantToBeCertificateProviderGuidanceIntro" }}
       {{ trHtml .App "whatYourCertificateProviderHasToDo" }}
       {{ trHtml .App "whoToChooseAsYourCertificateProvider" }}
