--- a/app/web/template/witnessing_as_certificate_provider.gohtml
+++ b/app/web/template/witnessing_as_certificate_provider.gohtml
@@ -1,22 +1,24 @@
 {{ template "page" . }}
 
+{{ define "pageTitle" }}{{ tr .App "witnessingAsCP" }}{{ end }}
+
 {{ define "main" }}
-    <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-            {{ trHtml .App "witnessingAsCPHeader" }}
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <h1 class="govuk-heading-xl">{{ tr .App "witnessingAsCP" }}</h1>
 
-            <form novalidate method="post">
-                <div class="moj-ticket-panel">
-                    <div class="moj-ticket-panel__content moj-ticket-panel__content--blue">
-                        {{ $enterUniqueCodeHint := trFormat .App "enterUniqueCodeHint" "CpFirstName" .Lpa.CertificateProvider.FirstNames "DonorFullName" .Lpa.DonorFullName }}
-                        {{ template "input" (input . "witness-code" "enterUniqueCodeLabel" .Form.Code "hint" $enterUniqueCodeHint "classes" "govuk-input--width-5" "autocomplete" "off") }}
-                    </div>
-                </div>
-
-                {{ trFormatHtml .App "cpNotReceivedCodeLink" "CpFirstName" .Lpa.CertificateProvider.FirstNames }}
-
-                {{ template "continue-button" . }}
-            </form>
+      <form novalidate method="post">
+        <div class="moj-ticket-panel">
+          <div class="moj-ticket-panel__content moj-ticket-panel__content--blue">
+            {{ $enterUniqueCodeHint := trFormat .App "enterUniqueCodeHint" "CpFirstName" .Lpa.CertificateProvider.FirstNames "DonorFullName" .Lpa.DonorFullName }}
+            {{ template "input" (input . "witness-code" "enterUniqueCodeLabel" .Form.Code "hint" $enterUniqueCodeHint "classes" "govuk-input--width-5" "autocomplete" "off") }}
+          </div>
         </div>
+
+        {{ trFormatHtml .App "cpNotReceivedCodeLink" "CpFirstName" .Lpa.CertificateProvider.FirstNames }}
+
+        {{ template "continue-button" . }}
+      </form>
     </div>
+  </div>
 {{ end }}
