--- a/app/web/template/you_have_submitted_your_lpa.gohtml
+++ b/app/web/template/you_have_submitted_your_lpa.gohtml
@@ -1,25 +1,27 @@
 {{ template "page" . }}
 
+{{ define "pageTitle" }}{{ tr .App "submittedYourLpa" }}{{ end }}
+
 {{ define "main" }}
-    <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-            <div class="govuk-panel govuk-panel--confirmation">
-                {{trHtml .App "submittedLpaHeader"}}
-            </div>
+  <div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+      <div class="govuk-panel govuk-panel--confirmation">
+        <h1 class="govuk-panel__title">{{ tr .App "submittedYourLpa" }}</h1>
+      </div>
 
-            {{trHtml .App "whatHappensNextSubHeader"}}
+      <h2 class="govuk-heading-m">{{ tr .App "whatHappensNext" }}</h2>
 
-            {{trFormatHtml .App "nextStepsList" "CpFirstNames" .Lpa.CertificateProvider.FirstNames "AttorneysFullNames" .Lpa.AttorneysFullNames }}
+      {{ trFormatHtml .App "nextStepsList" "CpFirstNames" .Lpa.CertificateProvider.FirstNames "AttorneysFullNames" .Lpa.AttorneysFullNames }}
 
-            {{trHtml .App "weWillEmailYou"}}
+      {{ trHtml .App "weWillEmailYou" }}
 
-            {{ $formattedDeadline := formatDate .Lpa.AttorneysAndCpSigningDeadline}}
-            {{ $signIn4WeeksWarning := trFormat .App "signIn4WeeksWarning" "CpFirstNames" .Lpa.CertificateProvider.FirstNames "AttorneysAndCpSigningDeadline" $formattedDeadline}}
-            {{ template "warning" (warning .App $signIn4WeeksWarning) }}
+      {{ $formattedDeadline := formatDate .Lpa.AttorneysAndCpSigningDeadline}}
+      {{ $signIn4WeeksWarning := trFormat .App "signIn4WeeksWarning" "CpFirstNames" .Lpa.CertificateProvider.FirstNames "AttorneysAndCpSigningDeadline" $formattedDeadline}}
+      {{ template "warning" (warning .App $signIn4WeeksWarning) }}
 
-            <a class="govuk-button" href="{{ link .App .App.Paths.Dashboard }}" data-module="govuk-button">
-                {{ tr $.App "continue" }}
-            </a>
-        </div>
+      <a class="govuk-button" href="{{ link .App .App.Paths.Dashboard }}" data-module="govuk-button">
+        {{ tr $.App "continue" }}
+      </a>
     </div>
+  </div>
 {{ end }}
