prefer helper func to string comparison

--- a/app/web/template/dashboard.gohtml
+++ b/app/web/template/dashboard.gohtml
@@ -42,7 +42,7 @@
               <h2 class="govuk-heading-m govuk-!-padding-top-0 govuk-!-margin-bottom-1">{{ if eq "pfa" .Type }}{{ tr $.App "lpaTypePfa" }}{{ else }}{{ tr $.App "lpaTypeHw" }}{{ end }}: <span class="govuk-!-font-weight-regular">{{ .You.FirstNames }} {{ .You.LastName }}</span></h2>
               <span class="govuk-hint"><strong>{{ tr $.App "applicationNumber" }}:</strong> {{ .ID }}</span>
               <div class="govuk-button-group govuk-!-margin-top-4">
-                {{ if eq .Progress.LpaSigned.String "completed" }}
+                {{ if .Progress.LpaSigned.Completed }}
                   <a class="govuk-button" href="{{ link $.App (printf "%s%s" .ID $.App.Paths.Progress) }}">{{ tr $.App "trackLpaProgress" }}</a>
                 {{ else }}
                   <a class="govuk-button" href="{{ link $.App (printf "%s%s" .ID $.App.Paths.TaskList) }}">{{ tr $.App "continue" }}</a>
