--- a/app/web/template/sign_your_lpa.gohtml
+++ b/app/web/template/sign_your_lpa.gohtml
@@ -11,9 +11,9 @@
 
       {{ trFormatHtml .App "signYourLpaHeader" }}
 
-      <p class="govuk-body govuk-!-font-weight-bold">
-        {{ trFormatCount .App "wantAttorneysToBeAppointed" (len .Lpa.Attorneys) "AllAttorneysFullNames" .Lpa.AttorneysFullNames "LpaType" (tr .App .Lpa.LpaLegalTermTransKey) }}
-      </p>
+            <p class="govuk-body govuk-!-font-weight-bold">
+                {{ trFormatCount .App "wantAttorneysToBeAppointed" (len .Lpa.Attorneys) "AllAttorneysFullNames" .Lpa.AttorneysFullNames "LpaType" (tr .App .Lpa.TypeLegalTermTransKey) }}
+            </p>
 
       {{ if eq .Lpa.Type "pfa" }}
         {{ trFormatHtml .App "explainAttorneysPowersPfa" "AllAttorneysFirstNames" .Lpa.AttorneysFirstNames }}
