--- a/app/web/template/do_you_want_to_notify_people.gohtml
+++ b/app/web/template/do_you_want_to_notify_people.gohtml
@@ -12,9 +12,9 @@
 
         {{ trHtml .App "wantPeopleToNotifyContent" }}
 
-        {{ $lpaType := tr .App .Lpa.LpaLegalTermTransKey }}
-        {{ $howWorkTogether := tr .App .HowWorkTogether }}
-        {{ trFormatHtml .App "weWillOnlyTellThemBullets" "LpaType" $lpaType "AllAttorneysFirstNames" .Lpa.AttorneysFirstNames "HowAttorneysWorkTogether" $howWorkTogether}}
+                {{ $lpaType := tr .App .Lpa.TypeLegalTermTransKey }}
+                {{ $howWorkTogether := tr .App .HowWorkTogether }}
+                {{ trFormatHtml .App "weWillOnlyTellThemBullets" "LpaType" $lpaType "AllAttorneysFirstNames" .Lpa.AttorneysFirstNames "HowAttorneysWorkTogether" $howWorkTogether}}
 
         {{ trHtml .App "findOutMoreAboutPeopleToNotifyLink" }}
 
