--- a/app/web/template/do_you_want_to_notify_people.gohtml
+++ b/app/web/template/do_you_want_to_notify_people.gohtml
@@ -12,9 +12,18 @@
 
         {{ trHtml .App "wantPeopleToNotifyContent" }}
 
-                {{ $lpaType := tr .App .Lpa.TypeLegalTermTransKey }}
-                {{ $howWorkTogether := tr .App .HowWorkTogether }}
-                {{ trFormatHtml .App "weWillOnlyTellThemBullets" "LpaType" $lpaType "AllAttorneysFirstNames" .Lpa.AttorneysFirstNames "HowAttorneysWorkTogether" $howWorkTogether}}
+        {{ $lpaType := tr .App .Lpa.TypeLegalTermTransKey }}
+        {{ $howWorkTogether := tr .App .HowWorkTogether }}
+
+        <p class="govuk-body">{{ tr .App "weWillOnlyTellThem" }}</p>
+        <ul class="govuk-list govuk-list--bullet">
+          <li>{{trFormat .App "thatYouHaveMadeALpaType" "LpaType" .Lpa.Type }}</li>
+          <li>{{ trFormatCount .App "thatYourAttorneysAre" (len .Lpa.Attorneys) "AllAttorneysFirstNames" .Lpa.AttorneysFirstNames }}</li>
+          {{ if gt (len .Lpa.Attorneys) 1 }}
+            <li>{{ $howWorkTogether }}</li>
+          {{ end }}
+          <li>{{ tr .App "whatToDoIfYouHaveConcerns" }}</li>
+        </ul>
 
         {{ trHtml .App "findOutMoreAboutPeopleToNotifyLink" }}
 
