update address forms

--- a/app/web/template/choose_people_to_notify_address.gohtml
+++ b/app/web/template/choose_people_to_notify_address.gohtml
@@ -41,7 +41,7 @@
 
               <p class="govuk-body">
                 <a href="?action=manual&id={{ .PersonToNotify.ID }}" class="govuk-link govuk-link--no-visited-state">
-                  {{ tr .App "cantFindTheirAddress" }}
+                  {{ tr .App "cantFindTheirAddressInList" }}
                 </a>
               </p>
 
