--- a/app/web/template/your_address.gohtml
+++ b/app/web/template/your_address.gohtml
@@ -41,7 +41,7 @@
 
               <p class="govuk-body">
                 <a href="?action=manual" class="govuk-link govuk-link--no-visited-state">
-                  {{ tr .App "cantFindAddress" }}
+                  {{ tr .App "cantFindMyAddressInList" }}
                 </a>
               </p>
 
