--- a/app/web/template/choose_replacement_attorneys_address.gohtml
+++ b/app/web/template/choose_replacement_attorneys_address.gohtml
@@ -61,6 +61,14 @@
               <button name="action" value="lookup" class="govuk-button" data-module="govuk-button">
                 {{ tr .App "findAddress" }}
               </button>
+
+              {{ if .Errors.Has "lookup-postcode" }}
+                <p class="govuk-body">
+                  <a href="?action=manual&id={{ .Attorney.ID }}" class="govuk-link govuk-link--no-visited-state">
+                    {{ tr .App "enterAddressManually" }}
+                  </a>
+                </p>
+              {{ end }}
             {{ end }}
 
           </fieldset>
