--- a/app/web/template/certificate_provider_address.gohtml
+++ b/app/web/template/certificate_provider_address.gohtml
@@ -58,17 +58,15 @@
                 <input class="govuk-input govuk-input--width-10  {{ if .Errors.Has "lookup-postcode" }}govuk-input--error{{ end }}" id="f-lookup-postcode" name="lookup-postcode" type="text" autocomplete="postal-code" value="{{ .Form.LookupPostcode }}">
               </div>
 
+              <p class="govuk-body">
+                <a href="?action=manual" class="govuk-link govuk-link--no-visited-state">
+                  {{ tr .App "enterAddressManually" }}
+                </a>
+              </p>
+
               <button name="action" value="lookup" class="govuk-button" data-module="govuk-button">
                 {{ tr .App "findAddress" }}
               </button>
-
-              {{ if .Errors.Has "lookup-postcode" }}
-                <p class="govuk-body">
-                  <a href="?action=manual&id={{ .CertificateProvider.ID }}" class="govuk-link govuk-link--no-visited-state">
-                    {{ tr .App "enterAddressManually" }}
-                  </a>
-                </p>
-              {{ end }}
             {{ end }}
 
           </fieldset>
