add missing link class to template anchors

--- a/app/web/template/about_payment.gohtml
+++ b/app/web/template/about_payment.gohtml
@@ -22,7 +22,7 @@
       </div>
 
       <p class="govuk-body">
-        <a href="#" class="">{{ tr .App "qualifyingForReduction" }}</a>
+        <a href="#" class="govuk-link">{{ tr .App "qualifyingForReduction" }}</a>
       </p>
 
       <form novalidate method="post">
