--- a/app/web/template/layout/error-summary.gohtml
+++ b/app/web/template/layout/error-summary.gohtml
@@ -8,7 +8,7 @@
         <ul class="govuk-list govuk-error-summary__list">
           {{ range .Errors }}
             <li>
-              <a href="#f-{{ .Name }}" class="govuk-link">{{ .Error.Format $.App.Localizer }}</a>
+              <a href="#f-{{ .Name }}">{{ .Error.Format $.App.Localizer }}</a>
             </li>
           {{ end }}
         </ul>
