--- a/app/web/template/certificate_provider_address.gohtml
+++ b/app/web/template/certificate_provider_address.gohtml
@@ -41,7 +41,7 @@
 
               <p class="govuk-body">
                 <a href="?action=manual" class="govuk-link govuk-link--no-visited-state">
-                  {{ tr .App "cantFindAddress" }}
+                  {{ tr .App "cantFindTheirAddressInList" }}
                 </a>
               </p>
 
@@ -50,13 +50,19 @@
               </button>
 
             {{ else }}
-              <div id="find" class="govuk-form-group govuk-!-margin-bottom-6  {{ if .Errors.Has "lookup-postcode" }}govuk-form-group--error{{ end }}">
+              <div id="find" class="govuk-form-group govuk-!-margin-bottom-6 {{ if .Errors.Has "lookup-postcode" }}govuk-form-group--error{{ end }}">
                 <label class="govuk-label" for="f-lookup-postcode">
                   {{ tr .App "postcode" }}
                 </label>
                 {{ template "error-message" (errorMessage . "lookup-postcode") }}
                 <input class="govuk-input govuk-input--width-10  {{ if .Errors.Has "lookup-postcode" }}govuk-input--error{{ end }}" id="f-lookup-postcode" name="lookup-postcode" type="text" autocomplete="postal-code" value="{{ .Form.LookupPostcode }}">
               </div>
+
+              <p class="govuk-body">
+                <a href="?action=manual" class="govuk-link govuk-link--no-visited-state">
+                  {{ tr .App "enterAddressManually" }}
+                </a>
+              </p>
 
               <button name="action" value="lookup" class="govuk-button" data-module="govuk-button">
                 {{ tr .App "findAddress" }}
