--- a/app/web/template/your_address.gohtml
+++ b/app/web/template/your_address.gohtml
@@ -1,6 +1,6 @@
 {{ template "page" . }}
 
-{{ define "pageTitle" }}{{ tr .App "homeAddress" }}{{ end }}
+{{ define "pageTitle" }}{{ tr .App "whatIsYourAddress" }}{{ end }}
 
 {{ define "main" }}
   <div class="govuk-grid-row">
@@ -9,7 +9,7 @@
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
             <legend class="govuk-fieldset__legend govuk-fieldset__legend--xl">
-              <h1 class="govuk-fieldset__heading">{{ tr .App "homeAddress" }}</h1>
+              <h1 class="govuk-fieldset__heading">{{ tr .App "whatIsYourAddress" }}</h1>
             </legend>
 
             {{ if eq "manual" .Form.Action }}
@@ -41,7 +41,7 @@
 
               <p class="govuk-body">
                 <a href="?action=manual" class="govuk-link govuk-link--no-visited-state">
-                  {{ tr .App "cantFindAddress" }}
+                  {{ tr .App "cantFindMyAddressInList" }}
                 </a>
               </p>
 
@@ -58,11 +58,16 @@
                 <input class="govuk-input govuk-input--width-10  {{ if .Errors.Has "lookup-postcode" }}govuk-input--error{{ end }}" id="f-lookup-postcode" name="lookup-postcode" type="text" autocomplete="postal-code" value="{{ .Form.LookupPostcode }}">
               </div>
 
+              <p class="govuk-body">
+                <a href="?action=manual" class="govuk-link govuk-link--no-visited-state">
+                  {{ tr .App "enterAddressManually" }}
+                </a>
+              </p>
+
               <button name="action" value="lookup" class="govuk-button" data-module="govuk-button">
                 {{ tr .App "findAddress" }}
               </button>
             {{ end }}
-
           </fieldset>
         </div>
       </form>
