And legal rights and responsibilities page

--- a/app/web/template/read_your_lpa.gohtml
+++ b/app/web/template/read_your_lpa.gohtml
@@ -25,8 +25,8 @@
       {{ template "people-named-on-lpa" (peopleNamedOnLpa .App .Lpa false) }}
 
       <p class="govuk-body">
-        <a href="{{ link .App .App.Paths.SignYourLpa }}" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
-          {{ tr .App "continueToSigningPage" }}
+        <a href="{{ link .App .Continue }}" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
+          {{ tr .App "continue" }}
         </a>
       </p>
     </div>
