--- a/app/web/template/read_your_lpa.gohtml
+++ b/app/web/template/read_your_lpa.gohtml
@@ -26,7 +26,7 @@
 
       <p class="govuk-body">
         <a href="{{ link .App .App.Paths.SignYourLpa }}" role="button" draggable="false" class="govuk-button" data-module="govuk-button">
-          {{ tr .App "continueToSigningPage" }}
+          {{ tr .App "continue" }}
         </a>
       </p>
     </div>
